--- a/wp-content/themes/wedding-invitation/assets/css/wedding-styles.css
+++ b/wp-content/themes/wedding-invitation/assets/css/wedding-styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:wght@400;700&family=Allura&display=swap');
+/* Removed Google Fonts import - using local fonts instead */
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:wght@400;700&family=Allura&display=swap'); */
 
 /*
 ! tailwindcss v3.4.10 | MIT License | https://tailwindcss.com
